Dynamically change the title bar color on Windows 10 and save theme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,7 @@ target_link_libraries(appxPasteQT PRIVATE
     Qt6::Widgets
     WinToast
     dwmapi
+    ntdll
 
     SingleApplication::SingleApplication
 )
